cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__case_10_query_vars.snap
---
source: cynic-parser/src/parser.rs
expression: result.syntax()

---
ROOT@0..38
  OPERATION_DEF@0..37
    QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    NAME@6..9 "Foo"
    VARIABLE_DEFS@9..25
      OPEN_PAREN@9..10 "("
      VARIABLE_DEF@10..24
        VARIABLE@10..14
          DOLLAR@10..11 "$"
          NAME@11..14 "arg"
        COLON@14..15 ":"
        WHITESPACE@15..16 " "
        TYPE@16..24
          NAMED_TYPE@16..24
            NAME@16..24 "SomeType"
      CLOSE_PAREN@24..25 ")"
    WHITESPACE@25..26 " "
    SELECTION_SET@26..37
      OPEN_CURLY@26..27 "{"
      LINE_TERMINATOR@27..28 "\n"
      WHITESPACE@28..30 "  "
      SELECTION@30..36
        FIELD_SELECTION@30..36
          NAME@30..35 "field"
          LINE_TERMINATOR@35..36 "\n"
      CLOSE_CURLY@36..37 "}"
  LINE_TERMINATOR@37..38 "\n"

