cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__case_11_query_arguments.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
ROOT@0..24
  OPERATION_DEF@0..23
    QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    SELECTION_SET@6..23
      OPEN_CURLY@6..7 "{"
      LINE_TERMINATOR@7..8 "\n"
      WHITESPACE@8..10 "  "
      SELECTION@10..22
        FIELD_SELECTION@10..22
          NAME@10..14 "node"
          ARGUMENTS@14..22
            OPEN_PAREN@14..15 "("
            ARGUMENT@15..20
              NAME@15..17 "id"
              COLON@17..18 ":"
              VALUE@18..20
                WHITESPACE@18..19 " "
                INTEGER_VALUE@19..20
                  NUMBER@19..20 "1"
            CLOSE_PAREN@20..21 ")"
            LINE_TERMINATOR@21..22 "\n"
      CLOSE_CURLY@22..23 "}"
  LINE_TERMINATOR@23..24 "\n"

