cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__case_14_query_nameless_vars.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
ROOT@0..87
  OPERATION_DEF@0..86
    QUERY_KEYWORD@0..5 "query"
    VARIABLE_DEFS@5..32
      OPEN_PAREN@5..6 "("
      VARIABLE_DEF@6..19
        VARIABLE@6..12
          DOLLAR@6..7 "$"
          NAME@7..12 "first"
        COLON@12..13 ":"
        WHITESPACE@13..14 " "
        TYPE@14..17
          NAMED_TYPE@14..17
            NAME@14..17 "Int"
        COMMA@17..18 ","
        WHITESPACE@18..19 " "
      VARIABLE_DEF@19..31
        VARIABLE@19..26
          DOLLAR@19..20 "$"
          NAME@20..26 "second"
        COLON@26..27 ":"
        WHITESPACE@27..28 " "
        TYPE@28..31
          NAMED_TYPE@28..31
            NAME@28..31 "Int"
      CLOSE_PAREN@31..32 ")"
    WHITESPACE@32..33 " "
    SELECTION_SET@33..86
      OPEN_CURLY@33..34 "{"
      LINE_TERMINATOR@34..35 "\n"
      WHITESPACE@35..37 "  "
      SELECTION@37..61
        FIELD_SELECTION@37..61
          NAME@37..43 "field1"
          ARGUMENTS@43..61
            OPEN_PAREN@43..44 "("
            ARGUMENT@44..57
              NAME@44..49 "first"
              COLON@49..50 ":"
              VALUE@50..57
                WHITESPACE@50..51 " "
                VARIABLE@51..57
                  DOLLAR@51..52 "$"
                  NAME@52..57 "first"
            CLOSE_PAREN@57..58 ")"
            LINE_TERMINATOR@58..59 "\n"
            WHITESPACE@59..61 "  "
      SELECTION@61..85
        FIELD_SELECTION@61..85
          NAME@61..67 "field2"
          ARGUMENTS@67..85
            OPEN_PAREN@67..68 "("
            ARGUMENT@68..83
              NAME@68..74 "second"
              COLON@74..75 ":"
              VALUE@75..83
                WHITESPACE@75..76 " "
                VARIABLE@76..83
                  DOLLAR@76..77 "$"
                  NAME@77..83 "second"
            CLOSE_PAREN@83..84 ")"
            LINE_TERMINATOR@84..85 "\n"
      CLOSE_CURLY@85..86 "}"
  LINE_TERMINATOR@86..87 "\n"

