cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__case_27_query_directive.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
ROOT@0..28
  OPERATION_DEF@0..27
    QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    DIRECTIVES@6..17
      DIRECTIVE@6..17
        AT@6..7 "@"
        NAME@7..16 "directive"
        WHITESPACE@16..17 " "
    SELECTION_SET@17..27
      OPEN_CURLY@17..18 "{"
      LINE_TERMINATOR@18..19 "\n"
      WHITESPACE@19..21 "  "
      SELECTION@21..26
        FIELD_SELECTION@21..26
          NAME@21..25 "node"
          LINE_TERMINATOR@25..26 "\n"
      CLOSE_CURLY@26..27 "}"
  LINE_TERMINATOR@27..28 "\n"

